--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+iframe {
+  width: 100%;
+  min-width: 304px;
+  max-width: 620px;
+  height: 330px;
+  border: none;
+}
