--- a/src/static/style/listUsers.css
+++ b/src/static/style/listUsers.css
@@ -1,5 +1,6 @@
 h2 {
   font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
 }
 .ant-table-thead > tr > th {
   background: rgb(185, 185, 185);
@@ -7,14 +8,10 @@ h2 {
 tbody {
   background: #fafafa;
 }
-.container-listUser {
-  padding: 1.5rem 1rem;
-  background: white;
-}
 .pagination-listUser {
   display: flex;
   justify-content: center;
-  margin-top: 1rem;
+  margin-top: 2.5rem;
 }
 .title{
     margin-bottom: 1rem;
