--- a/src/static/style/promotion.css
+++ b/src/static/style/promotion.css
@@ -23,7 +23,7 @@
   padding: 0.5rem;
 }
 .btn-create-promo {
-  position: absolute;
+  /* position: absolute;
   top: -430%;
-  right: 8px;
+  right: 8px; */
 }
