--- a/src/static/style/promotion.css
+++ b/src/static/style/promotion.css
@@ -4,11 +4,35 @@
 }
 .section1-promotion > div,
 .section2-promotion > div {
-  border: 1px solid rgb(196, 194, 194);
-  padding: 0.5rem;
+  border: 1px solid #EEEEEE;
+  padding: 1rem;
 }
 .promotion-title-field {
-  margin: 0.5rem 0;
+  margin: 0 0 0.5rem 0;
+
+}
+.promotion-title-status{
+  display: flex;
+  margin:  .5rem 0 0 0;
+  align-items: baseline;
+  justify-content: space-between;
+}
+.promotion-choose-typeEvent>label{
+  margin-right: 1rem;
+  border-radius:4px !important;
+}
+.promotion-choose-typeEvent>.ant-radio-button-wrapper-checked{
+  background: #FFC50E !important;
+  color: black !important;
+  border-color: #FFC50E !important;
+}
+.promotion-choose-typeEvent>.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before{
+  background: #FFC50E !important;
+  opacity: 1;
+}
+.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled){
+  -webkit-box-shadow: none !important;
+    box-shadow: none !important;
 }
 .choose-promo {
   display: flex;
@@ -16,11 +40,6 @@
 }
 .choose-promo > label {
   border-radius: 0 !important;
-}
-.section2-promotion > div > div {
-  display: flex;
-  flex-direction: row;
-  padding: 0.5rem;
 }
 .btn-create-promo {
   position: absolute;
@@ -62,4 +81,61 @@
 }
 .detail-game{
   display: flex;
+}
+.promo-title-name{
+  display: flex;
+  justify-content: space-between;
+}
+/* menu choose platform */
+.promo-choose-platform{
+  display: flex;
+  margin: .7rem 0 .5rem 0;
+}
+.promo-choose-platform-name>h3,.promo-choose-platform-server>h3{
+  margin-right: 1.5rem;
+}
+.promo-choose-platform-name{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  width: 50%;
+  justify-content: space-between;
+}
+.promo-choose-platform-server{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+  padding-left: 1rem;
+  width: 50%;
+}
+.promo-section2{
+  margin-top: 2rem;
+  border-top: 1px solid #d9d9d9;
+  padding-top: 1rem;
+}
+/* section3-time */
+.section2-promotion > div > div {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5rem 0;
+}
+.section2-promotion-pickTime{
+  display: flex;
+  justify-content: space-between;
+}
+.section2-promotion-footer{
+  background: #EEEEEE;
+  color: red;
+}
+/* section4 */
+.section4-promotion{
+  border: 1px solid #EEEEEE;
+  margin: .5rem;
+}
+.section4-promotion-title{
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  background: #eeeeee;
 }
