--- a/src/static/style/promotion.css
+++ b/src/static/style/promotion.css
@@ -143,3 +143,9 @@
   display: flex;
   justify-content: space-between;
 }
+.dropdown-coin-event{
+  display: none !important;
+}
+.select-coin-event>.ant-select-selection--single{
+  cursor: auto;
+}
