--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,9 @@ iframe {
 ._se_tab_content_image>.se-dialog-body>.se-dialog-form:nth-of-type(1) {
   display: none !important;
 }
+.ant-input{
+  border-radius: 0;
+}
+.ant-seclect-selection{
+  border-radius: 0 !important;
+}
