--- a/src/static/style/listProducts.css
+++ b/src/static/style/listProducts.css
@@ -4,53 +4,73 @@
   justify-content: space-between;
   flex-direction: column;
 }
-.products-title>div:first-child{
-    display: flex;
-    justify-content: space-between;
-}
-.products-content>.section1>div{
+.products-title > div:first-child {
   display: flex;
   justify-content: space-between;
 }
-.edit-product-content-title{
+.products-content > .section1 > div {
+  display: flex;
+  justify-content: space-between;
+}
+.edit-product-content-title {
   margin: 5px;
   color: black;
 }
-.products-content>.section1>div>div{
+.products-content > .section1 > div > div {
   display: flex;
   flex-direction: column;
 }
-.products-content>.section1>div>div>span{
+.products-content > .section1 > div > div > span {
   padding-left: 1rem;
   font-size: 14px;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
-.product-input-update{
+.product-input-update {
   display: flex;
   flex-direction: column;
-  margin-top: .7rem;
+  margin-top: 0.7rem;
 }
-.product-input-update>span{
-  margin: .3rem 0;
+.product-input-update > span {
+  margin: 0.3rem 0;
 }
-.products-content>.section2>div{
+.products-content > .section2 > div {
   display: flex;
   flex-direction: column;
   padding: 1rem;
   background: #f3f3f3;
   margin-left: 1rem;
 }
-.products-content>.section2>div>span{
-  margin-top: .5rem;
+.products-content > .section2 > div > span {
+  margin-top: 0.5rem;
   display: flex;
   justify-content: space-between;
 }
-.product-input-update>div{
+.product-input-update > div {
   display: flex;
   justify-content: space-between;
-  margin-top: .7rem;
+  margin-top: 0.7rem;
 }
-.product-input-update>div>div{
+.product-input-update > div > div {
   display: flex;
   flex-direction: column;
+}
+.view-more {
+  display: flex;
+  justify-content: end;
+}
+.btn-view-more {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+}
+/* chart-item */
+.chart-charges-title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.list-charges-title{
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5rem 0 .5rem
 }
