--- a/src/static/style/news.css
+++ b/src/static/style/news.css
@@ -16,8 +16,7 @@
     height: 15rem;
 }
 .listImages_news>.ant-modal-content>.ant-modal-body{
-    overflow-y: scroll;
-    height: 25rem;  
+    /*   */  
     width: 100%;
 }
 .ant-modal-footer>span{
@@ -35,4 +34,12 @@
 }
 .ant-radio-wrapper-checked>span>img{
     border-color: rgb(209, 48, 48);
+}
+.set-schedule-news{
+    padding: 1rem;
+}
+.set-thumbnail-news,.set-platform-news,.set-type-news{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
 }
