--- a/src/static/style/listProducts.css
+++ b/src/static/style/listProducts.css
@@ -8,6 +8,10 @@
   display: flex;
   justify-content: space-between;
 }
+.section1-listcoin {
+  border: 1px solid #f3f3f3;
+  padding: 1rem;
+}
 .products-content > .section1 > div {
   display: flex;
   justify-content: space-between;
@@ -37,8 +41,8 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  background: #f3f3f3;
   margin-left: 1rem;
+  border: 1px solid #f3f3f3;
 }
 .products-content > .section2 > div > span {
   margin-top: 0.5rem;
@@ -79,4 +83,18 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 1rem;
+}
+.modal_datepicker-chartCoin {
+  z-index: 9999;
+  width: 365px;
+  position: absolute;
+  top: 39px;
+  right: 0;
+}
+.calendar-select-chartsCoin{
+  top: 140px;
+  left: 1027px;
+}
+.calendar-select-chartsCoin>div{
+  width: 365px;
 }
