--- a/src/static/style/listUsers.css
+++ b/src/static/style/listUsers.css
@@ -30,5 +30,9 @@ tbody {
   display: none !important;
 }
 .email-verify{
-  color: red;
+  color: #10d991;
+}
+.email-verify>img{
+  margin-bottom: .2rem;
+  margin-right: .3rem;
 }
