--- a/src/static/style/news.css
+++ b/src/static/style/news.css
@@ -1,10 +1,12 @@
+
 .news-header {
   display: flex;
   justify-content: space-between;
 }
-.news-header {
-  display: flex;
-  justify-content: flex-end;
+.news-header>div:last-child{
+ width: 70%;
+ display: flex;
+ justify-content: flex-end;
 }
 .news-header > input {
   width: 20%;
