--- a/src/static/style/promotion.css
+++ b/src/static/style/promotion.css
@@ -204,3 +204,8 @@
 .ant-select-selection {
   border-radius: 0;
 }
+.select-image-promotion {
+  padding: 1rem 0.5rem;
+  margin: 1rem 0;
+  background: #eeeeee;
+}
