--- a/src/static/style/listProducts.css
+++ b/src/static/style/listProducts.css
@@ -94,6 +94,12 @@
   margin-bottom: 1rem;
   width: 80%;
 }
+.btn-search-listCoin > div {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
+  width: 100%;
+}
 .modal_datepicker-chartCoin {
   z-index: 9999;
   width: 365px;
@@ -150,4 +156,7 @@
   font-size: 1.2rem;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.42);
+}
+.icon-detail{
+margin-left: .5rem;
 }
